@@ -1,0 +1,11 @@
+CREATE TABLE IF NOT EXISTS users
+(
+  userid          INT             NOT NULL auto_increment,
+  username        VARCHAR(50)     NOT NULL,
+  password        TINYTEXT        NOT NULL,
+  email           VARCHAR(50)     NOT NULL,
+  admin           TINYINT(1)      NOT NULL DEFAULT 0,
+
+  PRIMARY KEY (userid),
+  UNIQUE (username)
+);
